<resources>
    <string name="app_name">TopUpin</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="security_setting">Security Setting</string>
    <string name="profile_setting">Profile Setting</string>
</resources>