<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher"
        android:translationY="30dp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/secondary_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="80dp"
        android:paddingTop="30dp"
        android:paddingEnd="80dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePicture">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="John Doe"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="johndoe@email.com"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="+62 812 3456 7890"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_border"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shape_border"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:src="@drawable/blue_arrow_up" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cash Inflow" />

                <TextView
                    android:id="@+id/cash_inflow_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rp. 500.000" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:src="@drawable/blue_arrow_down" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cash Outflow" />

                <TextView
                    android:id="@+id/cash_outflow_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rp. 500.000" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_top"
            android:drawableStart="@drawable/profile_icon"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/profile_setting"
            android:textAlignment="textStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_middle"
            android:drawableStart="@drawable/security_icon"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/security_setting"
            android:textAlignment="textStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_middle"
            android:drawableStart="@drawable/help_icon"
            android:translationZ="100dp"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/help_center"
            android:textAlignment="textStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_middle"
            android:drawableStart="@drawable/term_icon"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/terms_conditions"
            android:textAlignment="textStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_bottom"
            android:drawableStart="@drawable/privacy_icon"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/privacy_policy"
            android:textAlignment="textStart" />



    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_compact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border_sharp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="LOG OUT"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>